--- a/Greendow/index.html
+++ b/Greendow/index.html
@@ -281,19 +281,22 @@
 			</form>
 		</div>
 		<div class="pourquoi">
-			<div style="font-size: 50px;text-align: center;color: white;margin-top: 50px;margin-bottom: 100px;">Pourquoi Greendow?</div>
+			<div style="font-size: 50px;text-align: center;color: white;margin-top: 50px;margin-bottom: 100px;">Pourquoi
+				Greendow?</div>
 			<div class="les3">
 				<div class="col-2 les" ">
 					<div><img src=" img/Fonctionnalités.svg"></div>
 				<h2 style="margin-top: 80px;font-size: 30px;">fonctionnalité</h2>
 				<p style="margin-top: 50px;font-size: 20px;">Avez un contrôle total <br>sur votre fenêtre et sa
-					<br>configuration</p>
+					<br>configuration
+				</p>
 			</div>
 			<div class="col-2 les" ">
 					<div><img src=" img/Avantages.svg"></div>
 			<h2 style="margin-top: 80px;font-size: 30px;">Avantages</h2>
 			<p style="margin-top: 50px;font-size: 20px;">Avez un contrôle total <br>sur votre fenêtre et sa
-				<br>configuration</p>
+				<br>configuration
+			</p>
 		</div>
 		<div class="col-2 les" ">
 					<div><img src=" img/sécurité.svg"></div>
