--- a/Greendow/Control.html
+++ b/Greendow/Control.html
@@ -17,7 +17,7 @@
 				background-size: 400%;
 				animation: bganimation 45s infinite;
 			}
-			
+			/* ceci est un test */
 			@keyframes bganimation {
 				0% {
 					background-position: 0% 50%;
@@ -53,8 +53,8 @@
 				clear: both;
 			}
 
-			.col-2,
-				{
+			.col-2{
+				
 				display: block;
 				position: relative;
 				min-height: 1px;
