correction (toujours la même)

--- a/Greendow/index.html
+++ b/Greendow/index.html
@@ -50,8 +50,8 @@
 			.col-6,
 			.col-7,
 			.col-8,
-			.col-9,
-				{
+			.col-9{
+				
 				display: block;
 				position: relative;
 				min-height: 1px;
