--- a/Greendow/Utilisateur.html
+++ b/Greendow/Utilisateur.html
@@ -35,8 +35,8 @@
 				display: block;
 				clear: both;
 			}
-			.col-2,
-			{
+			.col-2{
+				
 				display: block;
 				position: relative;
 				min-height: 1px;
