--- a/Greendow/Foire aux questions.html
+++ b/Greendow/Foire aux questions.html
@@ -11,25 +11,10 @@
 			}
 
 			body {
-				background-image: linear-gradient(135deg, #e91d26, #ed004e, #e40075, #cd009c, #a221bf, #8352dd, #5a70f3, #0089ff, #00aeff, #00c8f1, #00da9c, #07e31a);
+				background-image: linear-gradient(#006838,#5bb948);
 				background-size: cover;
 				background-attachment: fixed;
 				background-size: 400%;
-				animation: bganimation 45s infinite;
-			}
-			
-			@keyframes bganimation {
-				0% {
-					background-position: 0% 50%;
-				}
-			
-				50% {
-					background-position: 100% 50%;
-				}
-			
-				100% {
-					background-position: 0% 50%;
-				}
 			}
 
 			.container {
@@ -65,12 +50,32 @@
 				width: 20%;
 			}
 
+			.col-3{
+				
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+				width: 25%;
+			}
+
+			.col-3 {
+				width: 25%;
+			}
+
 			.top-nav a {
 				height: 80px;
 				line-height: 80px;
 				text-decoration: none;
 				color: black;
 				font-size: 20px;
+				font-family: Century Gothic;
+				font-size: 20px;
+			}
+
+			.top-nav{
+				background-color: #e6ffd3;
+				height : 85px;
 			}
 
 			.top-nav a:hover {
@@ -80,13 +85,14 @@
 			.Control {
 				position: absolute;
 				top: 50%;
-				margin-top: -350px;
+				margin-top: -200px;
 				left: 50%;
 				margin-left: -600px;
 				background-color: rgba(0, 0, 0, 0.2);
 				width: 1200px;
 				height: 1330px;
 				border-radius: 25px;
+				font-family: Century Gothic;
 				/* text-align: center; */
 			}
 
@@ -98,6 +104,7 @@
 
 			.Aider {
 				height: 620px;
+				font-family: Century Gothic;
 				/* background-color: blue; */
 				display: grid;
 				grid-template-rows: 1fr 1fr;
@@ -175,16 +182,19 @@
 				display: flex;
 				justify-content: space-around;
 				height: 212px;
-				width: 1903px;
+				width: 1920px;
 				/* background-color: rgba(34, 140, 34, 0.8); */
 				position: absolute;
-				margin: 1375px 0 0 0;
+				margin: 100% 0 0 0;
+				background-color: #228B22;
+				width : 100%;
 			}
 
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
+				font-size: 12px;
+				font-family: Century Gothic;
 			}
 
 			.f3 div {
@@ -197,6 +207,8 @@
 			.footer a {
 				text-decoration: none;
 				color: white;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
 
 			.f4 {
@@ -236,7 +248,7 @@
 
 		<div class="Control">
 			<div class="title">
-				<p style="text-align: center;font-size: 30px;color: white;margin-top: 10px;"><span
+				<p style="text-align: center;font-size: 30px;font-family: Century Gothic;color: white;margin-top: 10px;"><span
 						id="nowDateTimeSpan"></span></p>
 				<p style="color: white;font-size: 35px;margin: 15px 0 0 120px;">Comment pouvons-nous vous aider?</p>
 			</div>
@@ -344,7 +356,7 @@
 			if (today.getDay() == 4) day = "Jeudi "
 			if (today.getDay() == 5) day = "Vendredi "
 			if (today.getDay() == 6) day = "Samedi "
-			document.getElementById('nowDateTimeSpan').innerHTML = yyyy + "-" + MM + "-" + dd + " " + hh + ":" + mm + ":" +
+			document.getElementById('nowDateTimeSpan').innerHTML = dd + "/" + MM + "/" + yyyy + " - " + hh + ":" + mm + ":" +
 				ss + "   " + day;
 			setTimeout('startTime()', 1000); //每一秒中重新加载startTime()方法 
 		}
