--- a/Greendow/Ajout de la nouvelle fenetre.html
+++ b/Greendow/Ajout de la nouvelle fenetre.html
@@ -21,29 +21,6 @@
 				background-size: cover;
 				background-attachment: fixed;
 				background-size: 400%;
-				animation: bganimation 10s infinite;
-			}
-
-			/*body {
-				background-image: linear-gradient(135deg, #0FFF4B, #33FF63, #33FFF9);
-				background-size: cover;
-				background-attachment: fixed;
-				background-size: 400%;
-				animation: bganimation 10s infinite;
-			}*/
-
-			@keyframes bganimation {
-				0% {
-					background-position: 0% 50%;
-				}
-
-				50% {
-					background-position: 100% 50%;
-				}
-
-				100% {
-					background-position: 0% 50%;
-				}
 			}
 
 			.container {
@@ -85,6 +62,7 @@
 				position: relative;
 				min-height: 1px;
 				float: left;
+				width: 25%;
 			}
 
 			.col-3 {
@@ -183,7 +161,6 @@
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
 				font-family: Century Gothic;
 				font-size: 12px;
 			}
