--- a/Greendow/Connexion.html
+++ b/Greendow/Connexion.html
@@ -44,21 +44,42 @@
 			.col-2 {
 				width: 20%;
 			}
+
+			.col-3{
+				
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+			}
+
+			.col-3 {
+				width: 26%;
+			}
+
 			.top-nav a {
 				height: 80px;
 				line-height: 80px;
 				text-decoration: none;
 				color: black;
 				font-size: 20px;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
-			
+
+			.top-nav{
+				background-color: white;
+				height : 85px;
+			}
+
 			.top-nav a:hover {
 				color: royalblue;
 			}
+
 			.Connexion{
 				position: absolute;
 				top: 50%;
-				margin-top: -250px;
+				margin-top: -175px;
 				left: 50%;
 				margin-left: -200px;
 				background-color: rgba(0,0,0,0.15);
@@ -66,7 +87,9 @@
 				height: 400px;
 				border-radius: 25px;
 				text-align: center;
+				font-family: Century Gothic;
 			}
+
 			p{
 				font-size: 42px;
 				font-weight: 600;
@@ -84,6 +107,7 @@
 				border-bottom: 2px solid silver;
 				outline: none;
 				font-size: 22px;
+				font-family: Century Gothic;
 			}
 			.btn{
 				background-color: seagreen;
@@ -113,13 +137,15 @@
 				width: 1920px;
 				background-color: rgba(34,140,34,0.8);
 				position: absolute;
-				margin: 645px 0 0 0;
+				margin: 700px 0 0 0;
+				width : 100%;
+				font-family: Century Gothic;
 			}
 			
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
+				font-size: 12px;
 			}
 			
 			.f3 div {
@@ -172,7 +198,7 @@
 		<form action="" class="Connexion">
 			<p>Connexion</p>
 			<input type="text" class="entrer" placeholder="Adresse mail"/>
-			<input type="password"/ class="entrer" placeholder="Mots de passe">
+			<input type="password"/ class="entrer" placeholder="Mot de passe">
 			<a href="#" style="float: right;margin-right: 40px;color: white;
 			text-decoration: none;margin-bottom: 15px;">Mot de passe oublié</a>
 			<input type="submit" class="btn" value="CONNEXION"/>
@@ -196,7 +222,7 @@
 				occaecat cupidatat non proident, sunt in culpa <br>
 				qui officia deserunt mollit anim id est laborum.
 			</div>
-			<div class="col-2 f3">
+			<div class="col-3 f3">
 				<div><a href="#">Qui sommes-nous?</a></div>
 				<div><a href="#">FAQ Assistance</a></div>
 				<div><a href="#">Mentions légales CGU</a></div>
