--- a/Greendow/Gerer d'un utilisateur.html
+++ b/Greendow/Gerer d'un utilisateur.html
@@ -12,7 +12,7 @@
 
 			body {
 				/* background: url(img/Connexion%20BG.jpg) no-repeat; */
-				background-image: linear-gradient(to left bottom, #e5168c, #c254c2, #8b79e2, #4892e9, #00a2dd, #00aed7, #00b8cb, #00c1ba, #00cfae, #00da94, #00e46b, #08eb26);
+				background-image: linear-gradient(#006838,#5bb948);
 				background-size: cover;
 				background-attachment: fixed;
 			}
@@ -50,12 +50,32 @@
 				width: 20%;
 			}
 
+			.col-3{
+				
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+				width: 25%;
+			}
+
+			.col-3 {
+				width: 25%;
+			}
+
 			.top-nav a {
 				height: 80px;
 				line-height: 80px;
 				text-decoration: none;
 				color: black;
 				font-size: 20px;
+				font-family: Century Gothic;
+				font-size: 20px;
+			}
+
+			.top-nav{
+				background-color: #e6ffd3;
+				height : 85px;
 			}
 
 			.top-nav a:hover {
@@ -64,8 +84,9 @@
 
 			.Control {
 				position: absolute;
+				font-family: Century Gothic;
 				top: 50%;
-				margin-top: -350px;
+				margin-top: -200px;
 				left: 50%;
 				margin-left: -600px;
 				background-color: rgba(0, 0, 0, 0.2);
@@ -163,16 +184,19 @@
 				display: flex;
 				justify-content: space-around;
 				height: 212px;
-				width: 1903px;
+				width: 1920px;
 				/* background-color: rgba(34, 140, 34, 0.8); */
 				position: absolute;
-				margin: 1345px 0 0 0;
+				margin: 100% 0 0 0;
+				background-color: #228B22;
+				width : 100%;
 			}
 
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
+				font-size: 12px;
+				font-family: Century Gothic;
 			}
 
 			.f3 div {
@@ -185,6 +209,8 @@
 			.footer a {
 				text-decoration: none;
 				color: white;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
 
 			.f4 {
@@ -196,6 +222,12 @@
 				font-size: 22px;
 				text-align: center;
 				line-height: 50px;
+			}
+
+			.f4 a{
+				color: white;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
 
 			.footer a:hover {
@@ -307,7 +339,7 @@
 				occaecat cupidatat non proident, sunt in culpa <br>
 				qui officia deserunt mollit anim id est laborum.
 			</div>
-			<div class="col-2 f3">
+			<div class="col-3 f3">
 				<div><a href="#">Qui sommes-nous?</a></div>
 				<div><a href="#">FAQ Assistance</a></div>
 				<div><a href="#">Mentions légales CGU</a></div>
@@ -346,7 +378,7 @@
 			if (today.getDay() == 4) day = "Jeudi "
 			if (today.getDay() == 5) day = "Vendredi "
 			if (today.getDay() == 6) day = "Samedi "
-			document.getElementById('nowDateTimeSpan').innerHTML = yyyy + "-" + MM + "-" + dd + " " + hh + ":" + mm + ":" +
+			document.getElementById('nowDateTimeSpan').innerHTML = dd + "/" + MM + "/" + yyyy + " - " + hh + ":" + mm + ":" +
 				ss + "   " + day;
 			setTimeout('startTime()', 1000); //每一秒中重新加载startTime()方法 
 		}
