Toujours mise en plpace graphique

--- a/Greendow/Petit quizz d'inscription.html
+++ b/Greendow/Petit quizz d'inscription.html
@@ -10,9 +10,10 @@
 				-ms-user-select: none;
 			}
 			body{
-				background: url(img/quizz.jpg) no-repeat;
+				background-image: linear-gradient(#006838,#5bb948);
 				background-size: cover;
 				background-attachment: fixed;
+				background-size: 400%;
 			}
 			
 			.container {
@@ -44,21 +45,44 @@
 			.col-2 {
 				width: 20%;
 			}
+
+			.col-3{
+				
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+			}
+
+			.col-3 {
+				width: 26%;
+			}
+
+
 			.top-nav a {
 				height: 80px;
 				line-height: 80px;
 				text-decoration: none;
 				color: black;
 				font-size: 20px;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
 			
 			.top-nav a:hover {
 				color: royalblue;
 			}
+
+			.top-nav{
+				background-color: #e6ffd3;
+				height : 85px;
+			}
+
+
 			.Quizz{
 				position: absolute;
 				top: 50%;
-				margin-top: -300px;
+				margin-top: -200px;
 				left: 50%;
 				margin-left: -500px;
 				background-color: rgba(0,0,0,0.4);
@@ -112,15 +136,18 @@
 				justify-content: space-around;
 				height: 212px;
 				width: 1920px;
-				background-color: rgba(34,140,34,0.8);
+				/* background-color: rgba(34, 140, 34, 0.8); */
 				position: absolute;
-				margin: 645px 0 0 0;
+				margin: 700px 0 0 0;
+				background-color: #228B22;
+				width : 100%;
 			}
 			
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
+				font-size: 12px;
+				font-family: Century Gothic;
 			}
 			
 			.f3 div {
@@ -133,6 +160,7 @@
 			.footer a {
 				text-decoration: none;
 				color: white;
+				font-family: Century Gothic;
 			}
 			
 			.f4 {
@@ -144,6 +172,12 @@
 				font-size: 22px;
 				text-align: center;
 				line-height: 50px;
+			}
+
+			.f4 a{
+				color: white;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
 			
 			.footer a:hover {
@@ -197,7 +231,7 @@
 				occaecat cupidatat non proident, sunt in culpa <br>
 				qui officia deserunt mollit anim id est laborum.
 			</div>
-			<div class="col-2 f3">
+			<div class="col-3 f3">
 				<div><a href="#">Qui sommes-nous?</a></div>
 				<div><a href="#">FAQ Assistance</a></div>
 				<div><a href="#">Mentions légales CGU</a></div>
