--- a/Greendow/Inscripton.html
+++ b/Greendow/Inscripton.html
@@ -44,21 +44,43 @@
 			.col-2 {
 				width: 20%;
 			}
+
+			.col-3{
+				
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+				width: 25%;
+			}
+
+			.col-3 {
+				width: 26%;
+			}
+
 			.top-nav a {
 				height: 80px;
 				line-height: 80px;
 				text-decoration: none;
 				color: black;
 				font-size: 20px;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
 			
 			.top-nav a:hover {
 				color: royalblue;
 			}
+
+			.top-nav{
+				background-color:white;
+				height : 80px;
+			}
+
 			.Inscription{
 				position: absolute;
 				top: 50%;
-				margin-top: -350px;
+				margin-top: -250px;
 				left: 50%;
 				margin-left: -200px;
 				background-color: rgba(0,0,0,0.3);
@@ -66,6 +88,7 @@
 				height: 600px;
 				border-radius: 25px;
 				text-align: center;
+				font-family: Century Gothic;
 			}
 			p{
 				font-size: 42px;
@@ -110,16 +133,17 @@
 				display: flex;
 				justify-content: space-around;
 				height: 212px;
-				width: 1920px;
+				width: 100%;
 				background-color: rgba(34,140,34,0.8);
 				position: absolute;
-				margin: 645px 0 0 0;
+				margin: 700px 0 0 0;
+				font-family: Century Gothic;
 			}
 			
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
+				font-size: 12px;
 			}
 			
 			.f3 div {
@@ -198,7 +222,7 @@
 				occaecat cupidatat non proident, sunt in culpa <br>
 				qui officia deserunt mollit anim id est laborum.
 			</div>
-			<div class="col-2 f3">
+			<div class="col-3 f3">
 				<div><a href="#">Qui sommes-nous?</a></div>
 				<div><a href="#">FAQ Assistance</a></div>
 				<div><a href="#">Mentions légales CGU</a></div>
