--- a/Greendow/Quizz.html
+++ b/Greendow/Quizz.html
@@ -17,22 +17,10 @@
 			} */
 			body{
 				/* background: linear-gradient(125deg,#845EC2,#D65DB1,#FF6F91,#FF9671,#FFC75F,#F9F871); */
-				background-image: linear-gradient(125deg, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+				background-image: linear-gradient(#006838,#5bb948);
 				background-size: cover;
 				background-attachment: fixed;
 				background-size: 400%;
-				animation: bganimation 45s infinite;
-			}
-			@keyframes bganimation{
-				0%{
-					background-position: 0% 50%;
-				}
-				50%{
-					background-position: 100% 50%;
-				}
-				100%{
-					background-position: 0% 50%;
-				}
 			}
 
 			.container {
@@ -68,11 +56,27 @@
 				width: 20%;
 			}
 
+			.col-3{
+				
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+				width: 25%;
+			}
+
+			.col-3 {
+				width: 26%;
+			}
+
+
 			.top-nav a {
 				height: 80px;
 				line-height: 80px;
 				text-decoration: none;
 				color: black;
+				font-size: 20px;
+				font-family: Century Gothic;
 				font-size: 20px;
 			}
 
@@ -80,16 +84,22 @@
 				color: royalblue;
 			}
 
+			.top-nav{
+				background-color: #e6ffd3;
+				height : 85px;
+			}
+
 			.Quizz {
 				position: absolute;
 				top: 50%;
-				margin-top: -300px;
+				margin-top: -200px;
 				left: 50%;
 				margin-left: -370px;
 				background-color: #5BB948;
 				width: 800px;
 				height: 500px;
 				border-radius: 25px;
+				font-family: Century Gothic;
 				/* text-align: center; */
 			}
 
@@ -136,16 +146,18 @@
 				display: flex;
 				justify-content: space-around;
 				height: 212px;
-				width: 1920px;
+				width: 100%;
 				/* background-color: rgba(34, 140, 34, 0.8); */
 				position: absolute;
-				margin: 645px 0 0 0;
+				margin: 700px 0 0 0;
+				background-color: #228B22;
+				font-family: Century Gothic;
 			}
 
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
+				font-size: 12px;
 			}
 
 			.f3 div {
@@ -226,7 +238,7 @@
 				occaecat cupidatat non proident, sunt in culpa <br>
 				qui officia deserunt mollit anim id est laborum.
 			</div>
-			<div class="col-2 f3">
+			<div class="col-3 f3">
 				<div><a href="#">Qui sommes-nous?</a></div>
 				<div><a href="#">FAQ Assistance</a></div>
 				<div><a href="#">Mentions légales CGU</a></div>
