Fin des changement graphiques

--- a/Greendow/Recherche d'utilisateur.html
+++ b/Greendow/Recherche d'utilisateur.html
@@ -49,16 +49,36 @@
 				width: 20%;
 			}
 
+			.col-3{
+				
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+				width: 25%;
+			}
+
+			.col-3 {
+				width: 26%;
+			}
+
 			.top-nav a {
 				height: 80px;
 				line-height: 80px;
 				text-decoration: none;
 				color: black;
 				font-size: 20px;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
 
 			.top-nav a:hover {
 				color: royalblue;
+			}
+
+			.top-nav{
+				background-color: white;
+				height : 85px;
 			}
 
 			/* .Recherche{
@@ -166,19 +186,20 @@
 				display: flex;
 				justify-content: space-around;
 				height: 212px;
-				width: 1903px;
+				width: 100%;
 				background-color: rgba(34, 140, 34, 0.8);
 				/* position: absolute;
 				margin: 50px 0 0 0; */
 				position: absolute;
 				margin-top: calc(100vh - 418px);
+				font-family: Century Gothic;
 
 			}
 
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
+				font-size: 12px;
 			}
 
 			.f3 div {
@@ -282,7 +303,7 @@
 				occaecat cupidatat non proident, sunt in culpa <br>
 				qui officia deserunt mollit anim id est laborum.
 			</div>
-			<div class="col-2 f3">
+			<div class="col-3 f3">
 				<div><a href="#">Qui sommes-nous?</a></div>
 				<div><a href="#">FAQ Assistance</a></div>
 				<div><a href="#">Mentions légales CGU</a></div>
