--- a/Greendow/try    index.html
+++ b/Greendow/try    index.html
@@ -26,7 +26,7 @@
 			.col-6,
 			.col-7,
 			.col-8,
-			.col-9,
+			.col-9
 				{
 				display: block;
 				position: relative;
@@ -70,6 +70,17 @@
 				width: 90%;
 			}
 
+			.col-f {
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+			}
+
+			.col-f{
+				width: 26%;
+			}
+
 
 
 
@@ -92,6 +103,7 @@
 					font-size: 23px;
 					position: relative;
 					margin: 0 calc(100% / 50);
+					font-family: Century Gothic;
 				}
 
 				.top-nav a:before {
@@ -222,6 +234,7 @@
 					width: 100%;
 					background-color: #5eaf4d;
 					position: relative;
+					font-family: Century Gothic;
 				}
 
 				.les3 {
@@ -240,6 +253,7 @@
 
 				.intro {
 					display: grid;
+					font-family: Century Gothic;
 					grid-template-rows: 1fr 1fr;
 					grid-template-columns: 1fr 1fr;
 					grid-template-areas:
@@ -278,6 +292,7 @@
 
 				.footer {
 					display: flex;
+					font-family: Century Gothic;
 					justify-content: space-around;
 					width: 100%;
 					background-color: #228B22;
@@ -534,7 +549,7 @@
 				.f2 {
 					color: white;
 					margin-top: 30px;
-					font-size: 14px;
+					font-size: 12px;
 					display: none;
 				}
 
@@ -663,8 +678,9 @@
 
 		</div>
 		<div class="footer">
-			<div class="footer1"><img src="img/EPA%20rogné.png"></div>
-			<div class="col f2 footer2">
+			<div class="footer1"><input type="image" src="./img/EPA%20rogné.png"
+				style="height:200px;margin:35px 0 0 -30px" /></div>
+			<div class="col-f f2">
 				Lorem ipsum dolor sit amet, consectetur <br>
 				adipiscing elit, sed do eiusmod tempor <br>
 				incididunt ut labore et dolore magna aliqua. <br>
@@ -676,7 +692,7 @@
 				occaecat cupidatat non proident, sunt in culpa <br>
 				qui officia deserunt mollit anim id est laborum.
 			</div>
-			<div class="f3">
+			<div class="col-f f3">
 				<div><a href="#">Qui sommes-nous?</a></div>
 				<div><a href="#">FAQ Assistance</a></div>
 				<div><a href="#">Mentions légales CGU</a></div>
@@ -687,8 +703,9 @@
 					<a href="mailto:Xqy1402494129@gmil.com">Contact</a>
 				</div>
 			</div>
-			<div class="footer5">
-				<img src="img/Capture_d_écran_2021-09-29_à_11.34.09-removebg-preview.png">
+			<div class="col-f f3">
+				<img src="img/Capture_d_écran_2021-09-29_à_11.34.09-removebg-preview.png"
+					style="height:130px;margin:40px 0 0 40px">
 			</div>
 		</div>
 	</body>
