--- a/Greendow/Utilisateur.html
+++ b/Greendow/Utilisateur.html
@@ -10,6 +10,15 @@
 				padding: 0;
 				-ms-user-select: none;
 			}
+
+			body {
+				/* background: linear-gradient(125deg,#845EC2,#D65DB1,#FF6F91,#FF9671,#FFC75F,#F9F871); */
+				background-image: linear-gradient(#006838,#5bb948);
+				background-size: cover;
+				background-attachment: fixed;
+				background-size: 400%;
+			}
+
 			/* body{
 				background: url(img/Connexion%20BG.jpg) no-repeat;
 				background-size: cover;
@@ -45,19 +54,39 @@
 			.col-2 {
 				width: 20%;
 			}
+
+			.col-3{
+				
+				display: block;
+				position: relative;
+				min-height: 1px;
+				float: left;
+				width: 25%;
+			}
+
+			.col-3 {
+				width: 26%;
+			}
+
 			.top-nav a {
 				height: 80px;
 				line-height: 80px;
 				text-decoration: none;
 				color: black;
 				font-size: 20px;
+				font-family: Century Gothic;
+				font-size: 20px;
 			}
-			
+			.top-nav{
+				background-color: #e6ffd3;
+				height : 85px;
+			}
 			.top-nav a:hover {
 				color: royalblue;
 			}
 			.utilisateur{
 				width: 90%;
+				font-family: Century Gothic;
 				height: 1000px;
 				display: flex;
 				flex-direction: column;
@@ -154,12 +183,13 @@
 				background-color: rgba(34,140,34,0.8);
 				position: absolute;
 				margin: 30px 0 0 0;
+				font-family: Century Gothic;
 			}
 			
 			.f2 {
 				color: white;
 				margin-top: 10px;
-				font-size: 14px;
+				font-size: 12px;
 			}
 			
 			.f3 div {
@@ -239,7 +269,7 @@
 				occaecat cupidatat non proident, sunt in culpa <br>
 				qui officia deserunt mollit anim id est laborum.
 			</div>
-			<div class="col-2 f3">
+			<div class="col-3 f3">
 				<div><a href="#">Qui sommes-nous?</a></div>
 				<div><a href="#">FAQ Assistance</a></div>
 				<div><a href="#">Mentions légales CGU</a></div>
