--- a/Greendow/Petit quizz d'inscription.html
+++ b/Greendow/Petit quizz d'inscription.html
@@ -90,6 +90,7 @@
 				height: 500px;
 				border-radius: 25px;
 				text-align: center;
+				font-family: Century Gothic;
 			}
 			p{
 				font-size: 30px;
