--- a/Greendow/try    index.html
+++ b/Greendow/try    index.html
@@ -588,10 +588,10 @@
 		<div class="top-nav">
 			<a href="" style="margin-left: calc(100% / 12);background-color: white;"><img
 					src="img/Capture_d_écran_2021-09-29_à_11.34.09-removebg-preview.png" style="height: 100px;"></a>
-			<a href="" class="top1" style="line-height: 40px;transform: translateY(15%)">Pourquoi Greendow</a>
+			<a href="#pourquoi" class="top1" style="line-height: 40px;transform: translateY(15%)">Pourquoi Greendow</a>
 			<a href="">FAQ</a>
 			<a href="">Acheter</a>
-			<a href="" class="top2">Connexion</a>
+			<a href="Connexion.html" class="top2">Connexion</a>
 			<a href="">Support</a>
 		</div>
 
@@ -608,7 +608,7 @@
 		</div>
 
 
-		<div class="pourquoi">
+		<div class="pourquoi" id="pourquoi">
 			<div style="font-size: 50px;text-align: center;color: white;margin-bottom: 100px;">Pourquoi
 				Greendow?</div>
 			<div class="les3">
